--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -11,4 +11,4 @@
 # the repo. Unless a later match takes precedence,
 # @EmersonEcologic/proxy-dev-code-crawlers team will be requested for
 # review when someone opens a pull request.
-*                               gazi12
+*                               samphorsb
